solved some bugs with navigation (navbar collapsed) padding correctly circuits padding correctly activitats padding correctly tarifes i horaris

--- a/css/estiula.css
+++ b/css/estiula.css
@@ -123,7 +123,10 @@ a, a:hover, a:focus{
 	padding-bottom: 180px;
 }
 .marge-bottom-circuits {
-	padding-bottom: 120px;
+	padding-bottom: 123px;
+}
+.marge-bottom-tarifa {
+	padding-bottom: 230px;
 }
 .titol {
 	box-shadow: 0px 10px 10px #343434;
@@ -179,6 +182,9 @@ a, a:hover, a:focus{
 .navbar-default .navbar-nav>.open>a:focus {
 	background-color: #CD5D2B;
 	color: #black;
+}
+.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #black;
 }
 .dropdown-menu>li>a {
 display: block;
